--- a/public/contact.html
+++ b/public/contact.html
@@ -122,11 +122,12 @@
                     	<div class="section-title text-center">
                             <span>We Are Available</span>
                             <h2><span>Get in touch</span></h2>
-                            <p>Lorem ipsum dolor sit amet, cons ectetur elit. Vestibulum nec odios Suspe ndisse cursus mal suada faci lisis. Lorem ipsum dolor sit ametion consectetur elit. Vesti bulum nec odio ipsum. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam.</p>
+                            <p>You are welcome to Email us with any questions, inquiries or orders. <br>
+                            We would be very happy to answer all your questions and set up meeting with you.</p>
                         </div>
                     	<div class="col-lg-8 col-md-8 col-sm-8 col-xs-12">
                         	<div class="contact-form">
-                            	<form action="/mail" class="thm-contact-form">
+                            	<form action="/mail" class="thm-contact-form" method="GET">
                                 	<input name="name" type="text" placeholder="Company Name - Your Name">
                                     <input name="email" type="text" placeholder="Email Address">
                                     <input name="phone" type="text" placeholder="Phone No.">
