--- a/public/index.html
+++ b/public/index.html
@@ -33,40 +33,26 @@
                 <nav class="mainmenu pull-right">
                     <div class="nav-holder">
                         <ul>
-                            <li><a href="index.html">Home</a></li>
-                            <li><a href="about.html">About us</a></li>
+                            <li><a href="index.html">HOME</a></li>
+                            <li><a href="about.html">ABOUT US</a></li>
                             <li class="dropdown">
-                                <a href="attorney-v1.html">Attorney</a>
-                                <ul class="submenu">
-                                    <li class="dropdown">
-                                        <a href="attorney-v2.html">Attorney Two</a>
-                                        <ul class="submenu">
-                                            <li><a href="attorney-v2.html">Third Level Menu</a></li>
-                                            <li><a href="single-attorney.html">Third Level Menu</a></li>
-                                        </ul>
-                                    </li>
-                                    <li><a href="single-attorney.html">Attorney Profile</a></li>
-                                </ul>
-                            </li>
-                            <li class="dropdown">
-                                <a href="practice-v1.html">Practice Areas</a>
+                                <a href="practice-v1.html">PRODUCT</a>
                                 <ul class="submenu">
                                     <li><a href="practice-v2.html">Practice Two</a></li>
                                     <li><a href="practice-v3.html">Practice Three</a></li>
                                     <li><a href="practice-v4.html">Practice Four</a></li>
-                                    <li><a href="practice-v5.html">Practice Five</a></li>
                                 </ul>
                             </li>
                             <li class="dropdown">
-                                <a href="blog-left-sidebar.html">blog</a>
+                                <a href="blog-left-sidebar.html">COLOR</a>
                                 <ul class="submenu">
-                                    <li><a href="blog-right-sidebar.html">Blog Two</a></li>
-                                    <li><a href="blog-v3.html">Blog Three</a></li>
-                                    <li><a href="blog-v4.html">Blog Four</a></li>
-                                    <li><a href="blog-details.html">Blog Details</a></li>
+                                    <li><a href="blog-right-sidebar.html">Color Two</a></li>
+                                    <li><a href="blog-v3.html">Color Three</a></li>
+                                    <li><a href="blog-v4.html">Color Four</a></li>
+                                    <li><a href="blog-details.html">Color Details</a></li>
                                 </ul>
                             </li>
-                            <li><a href="contact.html">contact us</a></li>
+                            <li><a href="contact.html">CONTACT US</a></li>
                         </ul>
                     </div>
                     <div class="nav-expander">
@@ -885,10 +871,13 @@
                         	<div class="widget-get-intouch">
                             	<h3>Get in Touch</h3>
                             	<ul>
-                                	<li class="location">Lorance Road 542B, Tailstoi Town 5248 MT, Wordwide Country</li>
-                                    <li class="phone">01865 524 8503</li>
-                                    <li class="envelop">contact@legalpower.com</li>
-                                    <li class="website">http://legalpower.com</li>
+                                	<li class="location">
+                                        5421 McLuhan End NW,
+                                        Edmonton AB, Canada, T6R 0P8
+                                    </li>
+                                    <li class="phone">+1 780-243-6277</li>
+                                    <li class="envelop">bpowdercoatings@gmail.com</li>
+                                    <li class="website">www.bypowder.com</li>
                                 </ul>
                             </div>
                         </div>
