--- a/public/index.html
+++ b/public/index.html
@@ -92,38 +92,109 @@
 
                             <div class="caption sfl sfb tp-resizeme caption-bold-heading text-center"
                             data-x="0" 
-                            data-y="480" 
-                            data-speed="700" 
+                            data-y="380" 
+                            data-speed="1500" 
                             data-start="1700"  
                             data-easing="easeOutBack"
                             >
-                                <h1>Equal . justic . under . law</h1>
+                                <h1>Quality</h1>
                             </div>
 
                             <div class="caption sfr sfb tp-resizeme p-tag text-center"
                             data-x="0" 
-                            data-y="570" 
-                            data-speed="700" 
+                            data-y="470" 
+                            data-speed="1500" 
                             data-start="2000"  
                             data-easing="easeOutBack"
                             >
-                                <p>Lorem ipsum dolor sit amet, cons ectetur elit. Vestibulum nec odios Suspe ndisse cursus mal suada faci lisis.<br> Lorem ipsum dolor sit ametion consectetur elit. Vesti bulum nec odio ipsum. </p>
+                                <p>We offer High-Quality powder Coatings.</p>
                             </div>
-                            <div class="caption sft tp-resizeme thm-btn text-center"
+<!--                             <div class="caption sft tp-resizeme thm-btn text-center"
                             data-x="0" 
                             data-y="660" 
-                            data-speed="700" 
+                            data-speed="1500" 
                             data-start="2800"  
                             data-easing="easeOutBack"
                             >
                                 <a href="#">View Services <i class="fa fa-arrow-right"></i></a>
-                            </div> 
+                            </div>  -->
 
                         </li>
 
+                        <li 
+                            class="slider-2" 
+                            data-transition="fade" 
+                            data-slotamount="7" 
+                            data-thumb="img/slider/2.jpg"
+                            data-title="SELECTIONS">
 
+                            <img 
+                                src="img/slider/2.jpg" 
+                                data-bgrepeat="no-repeat" 
+                                data-bgfit="cover" 
+                                data-bgposition="center center"
+                                alt="slider image">
+
+                            <div class="caption sfl sfb tp-resizeme caption-bold-heading text-center"
+                                data-x="0" 
+                                data-y="380" 
+                                data-speed="1500" 
+                                data-start="1700"  
+                                data-easing="easeOutBack"
+                            >
+                                <h1>Selections</h1>
+                            </div>
+
+                            <div class="caption sfr sfb tp-resizeme p-tag text-center"
+                                data-x="0" 
+                                data-y="470" 
+                                data-speed="1500" 
+                                data-start="2000"  
+                                data-easing="easeOutBack"
+                            >
+                                <p>We provide huge selection in Colors and Textures.</p>
+                            </div>
+
+                        </li>
+                        
                         <li 
                             class="slider-3" 
+                            data-transition="fade" 
+                            data-slotamount="7" 
+                            data-thumb="img/slider/2.jpg"
+                            data-title="PRICE">
+
+                            <img 
+                                src="img/slider/2.jpg" 
+                                data-bgrepeat="no-repeat" 
+                                data-bgfit="cover" 
+                                data-bgposition="center center"
+                                alt="slider image">
+
+                            <div class="caption sfl sfb tp-resizeme caption-bold-heading text-center"
+                                data-x="0" 
+                                data-y="380" 
+                                data-speed="1500" 
+                                data-start="1700"  
+                                data-easing="easeOutBack"
+                            >
+                                <h1>Price</h1>
+                            </div>
+
+                            <div class="caption sfr sfb tp-resizeme p-tag text-center"
+                                data-x="0" 
+                                data-y="470" 
+                                data-speed="1500" 
+                                data-start="2000"  
+                                data-easing="easeOutBack"
+                            >
+                                <p>We always keep price competitive. </p>
+                            </div>
+
+                        </li>
+
+<!--                         <li 
+                            class="slider-2" 
                             data-transition="fade" 
                             data-slotamount="7" 
                             data-thumb="img/slider/2.jpg"
@@ -139,17 +210,17 @@
                             <div class="caption sfl sfb tp-resizeme caption-1 text-center"
                             data-x="0" 
                             data-y="400" 
-                            data-speed="700" 
+                            data-speed="1500" 
                             data-start="1700"  
                             data-easing="easeOutBack"
                             >
-                                <h1>We Offer Our Clients Only</h1>
+                                <h1>Selections</h1>
                             </div>
 
                             <div class="caption sfr sfb tp-resizeme caption-2 large text-center"
                             data-x="0" 
                             data-y="460" 
-                            data-speed="700" 
+                            data-speed="1500" 
                             data-start="2000"  
                             data-easing="easeOutBack"
                             >
@@ -158,8 +229,8 @@
                             <div class="caption sft tp-resizeme caption-4 italic text-center"
                             data-x="0" 
                             data-y="543" 
-                            data-speed="700" 
-                            data-start="2500"  
+                            data-speed="1500" 
+                            data-start="1500"  
                             data-easing="easeOutBack"
                             >
                                 <p>Lorem ipsum dolor sit amet, cons ectetur elit. Vestibulum nec odios Suspe ndisse <br> cursus mal suada faci lisis. Lorem ipsum dolor sit ametion consectetur.</p>
@@ -167,7 +238,7 @@
                             <div class="caption sft tp-resizeme border text-center"
                             data-x="0" 
                             data-y="610" 
-                            data-speed="700" 
+                            data-speed="1500" 
                             data-start="2700"  
                             data-easing="easeOutBack"
                             >
@@ -176,14 +247,14 @@
                             <div class="caption sft tp-resizeme icon text-center"
                             data-x="0" 
                             data-y="680" 
-                            data-speed="700" 
+                            data-speed="1500" 
                             data-start="3000"  
                             data-easing="easeOutBack"
                             >
                                 <i class="flaticon-justice4"></i>
                             </div>
 
-                        </li>
+                        </li> -->
 
                     </ul>
                 </div>
