--- a/public/index.html
+++ b/public/index.html
@@ -36,11 +36,16 @@
                             <li><a href="index.html">HOME</a></li>
                             <li><a href="about.html">ABOUT US</a></li>
                             <li class="dropdown">
-                                <a href="practice-v1.html">PRODUCT</a>
+                                <a href="practice-v1.html">PRODUCTS</a>
                                 <ul class="submenu">
-                                    <li><a href="practice-v2.html">Practice Two</a></li>
-                                    <li><a href="practice-v3.html">Practice Three</a></li>
-                                    <li><a href="practice-v4.html">Practice Four</a></li>
+                                    <li><a href="General-Information.html">General Information</a></li>
+                                    <li><a href="Polyester.html">Polyester</a></li>
+                                    <li><a href="Epoxies.html">Epoxies</a></li>
+                                    <li><a href="Polyester-Eposy-Hybrids.html">Polyester-Eposy Hybrids</a></li>
+                                    <li><a href="Polyurethane.html">Polyurethane</a></li>
+                                    <li><a href="Art-Style.html">Art Style</a></li>
+                                    <li><a href="High-Temperature-Resistance.html">High Temperature Resistance</a></li>
+                                    <li><a href="Antimicrobial-Coating.html">Antimicrobial</a></li>
                                 </ul>
                             </li>
                             <li class="dropdown">
