--- a/public/Polyester.html
+++ b/public/Polyester.html
@@ -13,8 +13,6 @@
 		<link rel="stylesheet" href="css/style.css">
         <!-- Responsive stylesheet -->
         <link rel="stylesheet" href="css/responsive.css">
-        
-        
         <!--[if IE]><script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
     </head>
     <body>
@@ -33,7 +31,7 @@
                 <nav class="mainmenu pull-right">
                     <div class="nav-holder">
                         <ul>
-                            <li><a href="index.html">Home</a></li>
+                            <li><a href="/">Home</a></li>
                             <li><a href="about.html">About us</a></li>
                             <li class="dropdown">
                                 <a href="attorney-v1.html">Attorney</a>
