update product page, update nav

--- a/public/index.html
+++ b/public/index.html
@@ -38,14 +38,13 @@
                             <li class="dropdown">
                                 <a href="practice-v1.html">PRODUCTS</a>
                                 <ul class="submenu">
-                                    <li><a href="General-Information.html">General Information</a></li>
-                                    <li><a href="Polyester.html">Polyester</a></li>
-                                    <li><a href="Epoxies.html">Epoxies</a></li>
-                                    <li><a href="Polyester-Eposy-Hybrids.html">Polyester-Eposy Hybrids</a></li>
-                                    <li><a href="Polyurethane.html">Polyurethane</a></li>
-                                    <li><a href="Art-Style.html">Art Style</a></li>
-                                    <li><a href="High-Temperature-Resistance.html">High Temperature Resistance</a></li>
-                                    <li><a href="Antimicrobial-Coating.html">Antimicrobial</a></li>
+                                    <li><a href="products.html#polyester">Polyester</a></li>
+                                    <li><a href="products.html#epoxies">Epoxies</a></li>
+                                    <li><a href="products.html#polyester-epoxy-hybrids">Polyester-Eposy Hybrids</a></li>
+                                    <li><a href="products.html#polyurethane">Polyurethane</a></li>
+                                    <li><a href="products.html#art-style">Art Style</a></li>
+                                    <li><a href="products.html#high-temperature-resistance">High Temperature Resistance</a></li>
+                                    <li><a href="products.html#antimicrobial-coating">Antimicrobial</a></li>
                                 </ul>
                             </li>
                             <li class="dropdown">
@@ -294,10 +293,15 @@
                 	<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
                     	<div class="welcome-attorney">
                         	<div class="section-title">
-								<h1><span>Welcome to our attorney</span></h1>				
+								<h1><span>Welcome to Beyond Powder Coatings</span></h1>				
 							</div>
                             <div class="welcome-text">
-                               <p>Lorem ipsum dolor sit amet, cons ectetur elit. Vestibulum nec odios Suspe ndisse cursus mal suada faci lisis. Lorem ipsum dolor sit ametion consectetur elit. Vesti bulum nec odio ipsum. </p>
+                               <p>We offer superior performance powder coatings for many industrial applications. 
+                                   Our high quality powder coatings are presented in a wide range of different technologies such as: 
+                                   Polyester TGIC, Polyester TGIC-Free, Epoxies, Polyester-Epoxy Hybrids, Polyurethane, Art Style, High Temperature Resistance, and Antimicrobial Coatings.  
+                                   We also provide many types of surface appearance finishes, including Smooth, Texture, Sand Texture, River Texture, Silk Texture, Marbling Texture, Metallic, and Hammer Tone etc.  
+                                   We take a lot of pride in our product not only because of the superior quality but also the price and service that we offer.  
+                                   We treat customer needs as our first priority, your feedback is valuable and important to us. Beyond Powder Coatings truly appreciate the opportunity to serve our customers. </p>
 							</div>
 							<div class="fix civil-titigation">
                             	<div class="fix civil-img-holder alignleft">
