--- a/public/products.html
+++ b/public/products.html
@@ -347,21 +347,37 @@
                                 </div>
                             </div>
                             <div class=" practice-left-middle-text">
-                                <h2>family Law</h2>
-                                <p> Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.<br/><br/>Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur</p>
-                            </div>
-                            <div class=" practice-left-bottom-text">
-                                <div class=" practice-bottom-left-img">
-                                    <img src="img/practice-left-bottom.jpg" alt="">
+                                <div class="fix practice-left-middle-text">
+                                    <h3>General Information</h3>
+                                    <p>Polyurethane series powder coating is mainly made by carboxyl polyester resin. This type of powder coatings provide excellent levelling property, chemical resistance, weathering resistance and outstanding oil resistance. Polyurethane powder coatings are designed for any metal products that require high standard of chemical resistance, oil resistance and weathering resistance functional use on products for cars, motorcycles, oiling machine, and agricultural machine etc.</p>
+                                    <h3>Products Series</h3>
+                                    <p>Polyurethane powder coatings have limitations on color selection but verities on glosses. We can make high gloss (above 80%), semi-gloss (50 – 80%), matt black (20 – 50%) and flat black (below 20%) according to customer’s needs.</p>
                                 </div>
-                                <div class=" practice-bottom-right-text">
-                                    <h3>Duis aute irure dolor in reprehenderit in voluptate</h3>
-                                    <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet.<br/><br/>Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur</p>
+                                <div class="fix practice-left-bottom-text">
+                                    <div class="fix practice-bottom-left-img">
+                                        <img src="img/practice-left-bottom.jpg" alt="">
+                                    </div>
+                                    <div class="fix practice-bottom-right-text">
+                                        <h3>Physical Properties</h3>
+                                        <p>
+                                            Specific gravity: 1.4 – 1.7 g/cm&sup3 <br>
+                                            Grain fineness distribution: 100% smaller than 100um (can be adjusted accordingly)
+                                        </p>
+                                        <h3>Curing Condition</h3>
+                                        <p>
+                                            Standard: 190&degC (work piece temperature), 15min
+                                        </p>
+                                        <h3>Average Coverage</h3>
+                                        <p>
+                                            9-12 m&sup2/kg @ film thickness 60um (2.36mil) <br>
+                                            Note: Number is calculated under 100% usage rate. 
+                                        </p>
+                                    </div>
                                 </div>
-                            </div>
-                            <div class=" right-content-contact-box">
-                                <h1>All people are equal before the law. A good attorney.</h1>
-                                <a href="">Contact us</a>
+                                <div class="fix right-content-contact-box">
+                                    <h4>Test Performance</h3>
+                                    <img src="img/products/polyurethane.png">
+                                </div>
                             </div>
                         </div>
                         <div class="practice-left-content tab-pane fade" id="business">
