--- a/public/index.html
+++ b/public/index.html
@@ -84,11 +84,11 @@
                             class="slider-1" 
                             data-transition="fade" 
                             data-slotamount="7" 
-                            data-thumb="img/slider/1.jpg"
+                            data-thumb="img/slider/home1.png"
                             data-title="WE ARE AVAILABLE">
 
                             <img 
-                                src="img/slider/1.jpg" 
+                                src="img/slider/home1.png" 
                                 data-bgrepeat="no-repeat" 
                                 data-bgfit="cover" 
                                 data-bgposition="center center"
@@ -129,11 +129,11 @@
                             class="slider-2" 
                             data-transition="fade" 
                             data-slotamount="7" 
-                            data-thumb="img/slider/2.jpg"
+                            data-thumb="img/slider/home2.png"
                             data-title="SELECTIONS">
 
                             <img 
-                                src="img/slider/2.jpg" 
+                                src="img/slider/home2.png" 
                                 data-bgrepeat="no-repeat" 
                                 data-bgfit="cover" 
                                 data-bgposition="center center"
@@ -165,11 +165,11 @@
                             class="slider-3" 
                             data-transition="fade" 
                             data-slotamount="7" 
-                            data-thumb="img/slider/2.jpg"
+                            data-thumb="img/slider/home3.png"
                             data-title="PRICE">
 
                             <img 
-                                src="img/slider/2.jpg" 
+                                src="img/slider/home3.png" 
                                 data-bgrepeat="no-repeat" 
                                 data-bgfit="cover" 
                                 data-bgposition="center center"
@@ -283,8 +283,6 @@
                 </div>
             </div>
         </section>
-
-
         
         <!--Start welcome area-->
         <section id="welcome-area">
